--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
 <body>
   <header>
     <nav>
-      <img src="" alt="logo">
-        <div class="menu-container">
-            <a href="index.html">Home</a>
-            <a href="data/temperature.csv" download>Data</a>
-            <a href="news.html">News</a>
-            <a href="about.html">About</a>
-         </div>
-
+        <h2>TEMPEST</h2>
+        <a class="active push" href="index.html">Home</a>
+        <a href="data/temperature.csv" download>Data</a>
+        <a href="news.html">News</a>
+        <a href="about.html">About</a>
     </nav>
   </header>
   <main><section id="myChart"> </section> </main>
