--- a/index.html
+++ b/index.html
@@ -16,7 +16,41 @@
         <a href="about.html">About</a>
     </nav>
   </header>
-  <main><section id="myChart"> </section> </main>
+  <main>
+    <canvas id="myChart"></canvas>
+  </main>
+  <footer class="footer">
+    <div class="footer-section">
+      <h4>SKAPARE</h4>
+      <ul>
+        <li>Olle</li>
+        <li>Adam</li>
+        <li>Liv</li>
+        <li>Ludwig</li>
+        <li>Linus</li>
+        <li>Abraham</li>
+      </ul>
+    </div>
+    
+    <div class="footer-contact">
+      <h4>KONTAKTA OSS</h4>
+      <p>Telefonnummer: +xxx xxx xx xxx</p>
+      <p>Mail: John.Doe@Chasacademy.se</p>
+      <p>Adress: Arenavägen 61, 121 77 Johanneshov, Sverige</p>
+    </div>
+    
+    <div class="footer-icons">
+      <i class="icon-x">X</i>
+      <i class="icon-instagram">Instagram</i>
+      <i class="icon-facebook">Facebook</i>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>© Team Stockholm +1 Malmö</p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
