--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <nav>
         <h2>TEMPEST</h2>
         <a class="active push" href="index.html">Home</a>
-        <a href="data/temperature.csv" download>Data</a>
+        <a href="data/temperature.csv">Data</a>
         <a href="news.html">News</a>
         <a href="about.html">About</a>
     </nav>
   </header>
   <main>
+    
     <canvas id="myChart"></canvas>
   </main>
   <footer class="footer">
